crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S001_S001.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 38
---
S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:4:15
  |
4 | printf '%s\n' $name
  |

S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:5:15
  |
5 | printf '%s\n' ${name:-fallback}
  |
