crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S001_S001_oracle.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:11:15
   |
11 | printf '%s\n' $1
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:12:10
   |
12 | cp $HOME/$dir/dist/bin/$file /tmp
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:12:24
   |
12 | cp $HOME/$dir/dist/bin/$file /tmp
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:13:26
   |
13 | echo "ok $(printf '%s\n' $name)"
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:14:6
   |
14 | make $options file
   |
