crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S001_S001_oracle_contexts.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:10:21
   |
10 | printf '%s\n' prefix$foo
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:11:15
   |
11 | printf '%s\n' $foo-suffix
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:12:10
   |
12 | cp $HOME/$dir/dist/bin/$file /tmp
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:12:24
   |
12 | cp $HOME/$dir/dist/bin/$file /tmp
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:13:26
   |
13 | echo "ok $(printf '%s\n' $name)"
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:14:9
   |
14 | cat <<< $foo
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:15:19
   |
15 | printf '%s\n' ok >$file
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:16:1
   |
16 | $dir/tool --help
   |
