crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S001_S001_oracle_forms.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:7:15
  |
7 | printf '%s\n' $1
  |

S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:8:15
  |
8 | printf '%s\n' ${1}
  |

S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:9:15
  |
9 | printf '%s\n' $foo
  |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:10:15
   |
10 | printf '%s\n' ${foo}
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:11:15
   |
11 | printf '%s\n' ${maybe:-fallback}
   |

S001 quote parameter expansions to avoid word splitting and globbing
  --> <source>:12:15
   |
12 | printf '%s\n' ${maybe:=fallback}
   |
