crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S001_S001_oracle_ops.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:6:15
  |
6 | printf '%s\n' ${foo#*/}
  |

S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:7:15
  |
7 | printf '%s\n' ${bar// /_}
  |

S001 quote parameter expansions to avoid word splitting and globbing
 --> <source>:8:15
  |
8 | printf '%s\n' ${bar^^}
  |
