crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S002_S002.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S002 use `read -r` to keep backslashes literal
 --> <source>:3:1
  |
3 | read line
  |

S002 use `read -r` to keep backslashes literal
 --> <source>:4:6
  |
4 | IFS= read name
  |

S002 use `read -r` to keep backslashes literal
 --> <source>:5:1
  |
5 | read -p 'Name? ' answer
  |

S002 use `read -r` to keep backslashes literal
 --> <source>:6:1
  |
6 | read -u 3 fd_line
  |
