crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S003_S003.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 38
---
S003 iterating over command output is fragile; use globs, arrays, or explicit delimiters
 --> <source>:3:14
  |
3 | for entry in $(ls); do
  |
