crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S004_S004.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S004 quote command substitutions in arguments to avoid word splitting
 --> <source>:3:15
  |
3 | printf '%s\n' $(date)
  |

S004 quote command substitutions in arguments to avoid word splitting
 --> <source>:4:15
  |
4 | printf '%s\n' prefix$(date)suffix
  |
