crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S004_S004_oracle.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S004 quote command substitutions in arguments to avoid word splitting
 --> <source>:3:15
  |
3 | printf '%s\n' $(printf '%s\n' 'a b')
  |

S004 quote command substitutions in arguments to avoid word splitting
 --> <source>:4:21
  |
4 | printf '%s\n' prefix$(printf '%s\n' stamp)suffix
  |
