crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S005_S005.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S005 prefer `$(...)` over legacy backtick substitution
 --> <source>:3:7
  |
3 | stamp=`date`
  |

S005 prefer `$(...)` over legacy backtick substitution
 --> <source>:6:16
  |
6 | echo "today is `date`"
  |
