crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S006_S006.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S006 prefer `$((...))` over legacy `$[...]` arithmetic expansion
 --> <source>:3:6
  |
3 | echo $[1 + 2]
  |

S006 prefer `$((...))` over legacy `$[...]` arithmetic expansion
 --> <source>:4:7
  |
4 | value=$[count + 1]
  |
