crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S007_S007.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S007 keep `printf` format strings literal instead of expanding them from variables
 --> <source>:4:8
  |
4 | printf "$fmt" value
  |

S007 keep `printf` format strings literal instead of expanding them from variables
 --> <source>:5:15
  |
5 | printf -v out "$fmt" value
  |
